<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainActivity">

    <!-- view for AdMob Interstitial Ad -->
    <TextView android:id="@+id/app_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" android:text="@string/interstitial_ad_sample"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone"/>

    <TextView android:id="@+id/level" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_below="@+id/app_title"
        android:layout_centerHorizontal="true" android:text="@string/start_level"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone"/>

    <Button android:id="@+id/next_level_button" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" android:text="@string/next_level"
        android:visibility="gone"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"/>

        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleHorizontal"
            android:indeterminate="false"
            android:id="@+id/pb_loader" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/SText"
            android:text="@string/sp_loading"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</RelativeLayout>
