<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.ruby.loltellme.ui.activities.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="@dimen/small_margin"
                android:id="@+id/bt_all_champions"
                android:background="@drawable/button_all_champions"
                android:text="@string/ma_all_champions"
                android:gravity="bottom|center_horizontal"
                android:textAppearance="@style/LText"
                android:enabled="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:textAppearance="@style/MText"
                android:text="@string/ma_free_to_play" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_list_current"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/general_spell_height"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:textAppearance="@style/MText"
                android:text="@string/ma_disabled" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_list_disabled"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/general_spell_height"/>

            <android.widget.Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/ad_mob_height" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>

